<resources>
    <string name="app_name">Data Wallet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //qr code
    <string name="qc_code_close">Close</string>
    <string name="qr_code_open_flash_light">Turn on flash light</string>
    <string name="qr_code_close_flash_light">Turn off flash light</string>
    <string name="qr_code_auto_scan_notification">Position QR Code</string>
    <string name="qr_code_notification">Notification</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>

    <string name="txt_scan">Scan</string>
    <string name="txt_create">Create</string>
    <string name="txt_create_wallet">Create Wallet</string>
    <string name="txt_share">Share</string>
    <string name="txt_send">Send</string>
    <string name="txt_recieve">Receive</string>
    <string name="txt_certificates">Data</string>
    <string name="txt_data_agreement">Data agreement</string>
    <string name="txt_connections">Connections</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="txt_certificates_desc">You requested the following data to be issued. By choosing confirm you agree to add the data to your wallet.</string>
    <string name="txt_certificates_head">Covid 19 test certificates</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_add_certificate">Add data</string>
    <string name="txt_Add_certificate_desc">Choose the organisation to be connected to add data to the wallet or to exchange data</string>
    <string name="txt_wallet">Wallet</string>
    <string name="txt_preferences">Preferences</string>
    <string name="txt_no_connections_avaialable">No connections available</string>
    <string name="txt_no_data_avaialable">No data available</string>
    <string name="err_connection_already_added">Connection already existing</string>
    <string name="txt_loading_indy_library">Loading Indy Library...</string>
    <string name="txt_exchange_data">Exchange data</string>
    <string name="txt_add_connection">Add connection</string>
    <string name="txt_search_wallet">Search wallet...</string>
    <string name="txt_search">Search...</string>
    <string name="txt_search_connections">Search organisations...</string>
    <string name="txt_creating_pool">Configuring pool...</string>
    <string name="txt_finishing">Finishing...</string>
    <string name="txt_creating_wallet">Configuring wallet...</string>
    <string name="txt_organisations">Organisations</string>
    <string name="txt_logo">Logo</string>
    <string name="txt_exchange">Exchange</string>
    <string name="title_connection_list">Choose organisation</string>
    <string name="title_offer_detail">Data agreement</string>
    <string name="err_insufficient_data">Insufficient data requested</string>
    <string name="txt_requests">Requests</string>
    <string name="txt_connection_success_message">Connection success</string>
    <string name="notification_channel_success_messages" translatable="false">Success messages</string>
    <string name="notification_channel_success" translatable="false">success_messages</string>
    <string name="default_notification_channel_id" translatable="false">NotificationChannel</string>
    <string name="txt_org_overview">Overview</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_version_detail">"Version : %1$s"</string>
    <string name="err_unexpected">Unexpected error. Please try again.</string>
    <string name="txt_exchange_data_desc">By choosing exchange you agree to share the requested data to %1$s</string>
    <string name="txt_allow_connection_query">Allow <b>%1$s</b> to connect with you?</string>
    <string name="txt_language">Language</string>
    <string name="txt_ledger_network">Ledger network</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_network">Network</string>
    <string name="txt_powered_by">Powered by iGrant.io, Sweden</string>
    <string name="txt_data_wallet">Data wallet</string>
    <string name="txt_data_exchange">Data exchange</string>
    <string name="txt_notification">Notifications</string>
    <string name="txt_remove_data_card">Remove data card</string>
    <string name="txt_exchange_successful">Data has been shared with %1$s successfully</string>
    <string name="txt_exchange_successful_without_name">Data has been shared successfully</string>
    <string name="txt_certificate_delete_confirmation">Do you want to delete the certificate?</string>
    <string name="txt_confirmation">Confirmation</string>
    <string name="txt_exchange_request_delete_confirmation">Do you want to remove the exchange request?</string>
    <string name="txt_read_more">Read more</string>
    <string name="txt_read_less">.. Read less</string>
    <string name="txt_no_notifications_available">No new notification available</string>
    <string name="txt_language_caps">LANGUAGE</string>
    <string name="txt_ledger_network_caps">LEDGER NETWORK</string>
    <string name="txt_data_added_success_desc">Successfully added data to the wallet.</string>
    <string name="title_about_this_app">About this app</string>
    <string name="txt_about">About</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_terms_and_conditions">Terms Of Service</string>
    <string name="txt_aries_interoperatable_protocols">Aries Interoperability Protocols</string>
    <string name="txt_supported_protocols">Supported protocols</string>
    <string name="txt_received_offer_credential_desc">Received offer credential from organisation.</string>
    <string name="txt_received_offer">Received Offer Credential</string>
    <string name="txt_offer_credential_delete_confirmation">Do you want to remove the offer credential?</string>
    <string name="txt_data_request_accepted_successfully">Data offer accepted successfully.</string>
    <string name="txt_recieved_exchange_request">Received Exchange Request</string>
    <string name="txt_remove_organization">Remove Organization</string>
</resources>