<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bgColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/Black"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <TextView
        android:id="@+id/tvOrganizations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/txt_organisations"
        android:textColor="#000"
        android:textSize="@dimen/text_size_xx_large"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/mar_start"
        android:layout_marginEnd="@dimen/mar_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/tvOrganizations"
        app:layout_constraintTop_toTopOf="@+id/tvOrganizations"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrganizations"
        android:id="@+id/ivAdd"
        android:src="@drawable/ic_add_circle_black"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:justificationMode="inter_word"
        android:text="@string/txt_Add_certificate_desc"
        android:textColor="#000"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginStart="@dimen/mar_start"
        android:layout_marginEnd="@dimen/mar_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrganizations" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/mar_start"
        android:layout_marginEnd="@dimen/mar_start"
        android:background="@drawable/primary_edittext_background"
        android:hint="@string/txt_search"
        android:padding="10dp"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_search_grey"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConnections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/mar_start"
        android:layout_marginEnd="@dimen/mar_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        tools:listitem="@layout/item_connection"
        android:background="@drawable/primary_background"/>

    <LinearLayout
        android:id="@+id/llErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/bgColor"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/txt_no_connections_avaialable"
            android:src="@drawable/ic_no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/textColor"
            android:text="@string/txt_no_connections_avaialable"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>